# aeson

./: .ghcid  .gitignore  aeson.cabal  stack.yaml
.circleci/: config.yml
Data/: Aeson.hs
Data/Aeson/: Compat.hs  Text.hs  Types.hs
Data/Aeson/Encoding/: Builder.hs  Internal.hs
Data/Aeson/Internal/: Functions.hs  Scientific.hs  Time.hs
Data/Aeson/Parser/: Internal.hs  Time.hs  Unescape.hs
Data/Aeson/QQ/: Simple.hs
Data/Aeson/Types/: Class.hs  FromJSON.hs  Generic.hs  Internal.hs  ToJSON.hs
attoparsec-iso8601/Data/Attoparsec/: Time.hs
attoparsec-iso8601/Data/Attoparsec/Time/: Internal.hs
tests/: Encoders.hs  ErrorMessages.hs  Instances.hs  Options.hs  Properties.hs  SerializationFormatSpec.hs  Tests.hs  Types.hs  UnitTests.hs
tests/UnitTests/: NullaryConstructors.hs
