name:            aeson
version:         1.4.1.0
license:         BSD3
license-file:    LICENSE
category:        Text, Web, JSON
copyright:       (c) 2011-2016 Bryan O'Sullivan
                 (c) 2011 MailRank, Inc.
author:          Bryan O'Sullivan <bos@serpentine.com>
maintainer:      Adam Bergmark <adam@bergmark.nl>
stability:       experimental
tested-with:     GHC == 7.4.2, GHC == 7.6.3, GHC == 7.8.4, GHC == 7.10.3, GHC == 8.0.1
synopsis:        Fast JSON parsing and encoding
cabal-version:   >= 1.10
homepage:        https://github.com/bos/aeson
bug-reports:     https://github.com/bos/aeson/issues
build-type:      Simple
description:
    A JSON parsing and encoding library optimized for ease of use
    and high performance.
    .
    To get started, see the documentation for the @Data.Aeson@ module
    below.
    .
    (A note on naming: in Greek mythology, Aeson was the father of Jason.)

extra-source-files:
    *.yaml
    README.markdown
    benchmarks/json-data/*.json
    changelog.md
    ffi/Data/Aeson/Parser/*.hs
    tests/JSONTestSuite/test_parsing/*.json
    tests/JSONTestSuite/test_transform/*.json
    pure/Data/Aeson/Parser/*.hs

library
  default-language: Haskell2010
  hs-source-dirs: . attoparsec-iso8601 pure

  exposed-modules:
    Data.Aeson
    Data.Aeson.Encoding
    Data.Aeson.Parser
    Data.Aeson.Text
    Data.Aeson.Types
    Data.Aeson.QQ.Simple

    Data.Aeson.Encoding.Internal
    Data.Aeson.Internal
    Data.Aeson.Internal.Time
    Data.Aeson.Parser.Internal

  -- Deprecated modules
  exposed-modules:
    Data.Aeson.Encode

  other-modules:
    Data.Aeson.Compat
    Data.Aeson.Encoding.Builder
    Data.Aeson.Internal.Functions
    Data.Aeson.Parser.Unescape
    Data.Aeson.Parser.UnescapePure
    Data.Aeson.Parser.Time
    Data.Aeson.Types.FromJSON
    Data.Aeson.Types.Generic
    Data.Aeson.Types.ToJSON
    Data.Aeson.Types.Class
    Data.Aeson.Types.Internal
    Data.Attoparsec.Time
    Data.Attoparsec.Time.Internal

  -- GHC bundled libs
  build-depends:
    base             >= 4.5.0.0 && < 5,
    bytestring       >= 0.10.4 && < 0.11,
    containers       >= 0.4.2.1 && < 0.7,
    deepseq          >= 1.3.0.0 && < 1.5,
    ghc-prim         >= 0.2     && < 0.6,
    template-haskell >= 2.7.0.0 && < 2.15,
    text             >= 1.2.3.0 && < 1.3,
    time             >= 1.4     && < 1.9

  -- Compat
  build-depends:
    base-compat     >= 0.9.1    && < 0.11

  -- Other dependencies
  build-depends:
    attoparsec           >= 0.13.2.2 && < 0.14,
    dlist                >= 0.8.0.4  && < 0.9,
    scientific           >= 0.3.6.2  && < 0.4

  ghc-options: -Wall

test-suite tests
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs: tests ffi pure
  main-is: Tests.hs
  ghc-options: -Wall -threaded -rtsopts

  other-modules:
    Data.Aeson.Parser.UnescapeFFI
    Data.Aeson.Parser.UnescapePure
    Encoders
    ErrorMessages
    Functions
    Instances
    Options
    Properties
    SerializationFormatSpec
    Types
    UnitTests
    UnitTests.NullaryConstructors

  build-depends:
    QuickCheck >= 2.10.0.1 && < 2.12,
    aeson,
    integer-logarithms >= 1 && <1.1,
    attoparsec,
    base,
    base-compat,
    base-orphans >= 0.5.3 && <0.8,
    base16-bytestring,
    bytestring >= 0.10.4,
    containers,
    directory,
    dlist,
    filepath,
    ghc-prim >= 0.2,
    scientific,
    tasty,
    tasty-hunit,
    tasty-quickcheck,
    text,
    time,
    quickcheck-instances >= 0.3.16

source-repository head
  type:     git
  location: git://github.com/bos/aeson.git
